package cs211.project.services;

public interface DataReceivable {
    void setData(Object data);
}
